[tool.mypy]
plugins = ["pydantic.mypy"]
mypy_path = "./"
files = ["aiordr"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[tool.isort]
add_imports = ["from __future__ import annotations"]
force_single_line = true
profile = "black"

[tools.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "aiordr"
version = "0.3.0"
description = "Simple and fast library for interacting with the o!rdr API."
requires-python = ">=3.10,<4.0"
authors = [{ name = "Nice Aesthetics", email = "nice@aesth.dev" }]
license = "GPL-3.0-or-later"
readme = "README.rst"
repository = "https://github.com/NiceAesth/aiordr"
documentation = "https://aiordr.readthedocs.io/"
keywords = ["osu!", "osu", "api"]
include = ["py.typed"]
dependencies = [
    "aiohttp>=3.8.3,<4.0.0",
    "aiolimiter>=1.0.0,<2.0.0",
    "orjson>=3.8.3,<4.0.0",
    "pydantic>=2.0.3,<3.0.0",
    "python-socketio[asyncio_client]>=5.7.2,<6.0.0",
]

[project.urls]
repository = "https://github.com/NiceAesth/aiordr"
documentation = "https://aiordr.readthedocs.io/"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-mock", "toml", "types-toml"]
docs = ["sphinx", "furo", "toml"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.10.0"
mypy = "^1.0"
toml = "^0.10.2"
types-toml = "^0.10.8.1"
sphinx = "^9.0.0"
furo = "^2025.0.0"
pytest-cov = "^7.0.0"
black = { version = "^26.0.0", allow-prereleases = true }
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
